project2/terraform/netpol-default-deny.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: vulns-app
spec:
  podSelector:
    matchLabels: {}
